modification sur les fichiers indexhtml et indexjs

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="card-body">
                 <h5 class="card-title">Baskets</h5>
                 <p class="card-text">This is a basket</p>
-                <h4 class="pix">100 $</h4>
+                <h4 class="prix">100 $</h4>
                 <div>
                   <i class="fas fa-plus-circle plus"></i>
                   <span class="quantity qte">0</span>
